--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,26 @@
 <footer class="site-footer">
 
   <div class="container">
-    <p>This is the footer</p>
-    <p>&copy; Alan Mead 2018</p>
-    <p><small>Made with &hearts; in the Channel Islands</small></p>
+    <div class="footer-content">
+      <div class="brand">
+        <a href="./">
+          <h2>Alan<strong>Mead</strong></h2>
+          <h3><strong>Coach</strong> | Trainer</h3>
+        </a>
+      </div>
+      <ul class="footer-nav">
+        <li><a href="#about" class="smooth-scroll">About Me</a></li>
+        <li><a href="#coaching" class="smooth-scroll">Coaching</a></li>
+        <li><a href="#training" class="smooth-scroll">Training</a></li>
+        <li><a href="#contact" class="smooth-scroll">Contact</a></li>
+        <li><a href="https://linkedin.com/in/alanmead" target="_blank">LinkedIn</a></li>
+        <li><a href="https://twitter.com/{{ site.twitter }}" target="_blank">@{{ site.twitter }}</a></li>
+      </ul>
+    </div>
+    <div class="footer-footer">
+      <p>&copy; Alan Mead 2018</p>
+      <p>Made with &hearts; in the Channel Islands</p>
+    </div>
   </div>
 
 </footer>
