--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -3,8 +3,49 @@
   margin-top: 100px;
   background: #f8f8f8;
   padding: 50px 0;
-  text-align: center;
-  p {
-    max-width: 100%;
+  .footer-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+    .brand {
+      margin: 0 auto 30px;
+      @include for-tablet-landscape-up {
+        margin: 0;
+      };
+    }
+    .footer-nav {
+      flex: 0 0 100%;
+      list-style-type: none;
+      text-align: center;
+      @include for-tablet-landscape-up {
+        flex: 0 0 60%;
+        text-align: right;
+      };
+      li {
+        margin-bottom: 15px;
+        @include for-tablet-landscape-up {
+          display: inline-block;
+          margin-left: 15px;
+          margin-bottom: 0;
+        };
+        a {
+          font-weight: normal;
+          font-size: 15px;
+        }
+      }
+    }
+  }
+  .footer-footer {
+    text-align: center;
+    @include for-tablet-landscape-up {
+      text-align: right;
+    };
+    p {
+      margin-right: 0;
+      margin-left: auto;
+      font-size: 14px;
+    }
   }
 }
