--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,14 @@
   <div class="container">
     <div class="brand">
       <a href="./">
-        <h2>Alan<strong>Mead</strong></h2>
-        <h3><strong>Coach</strong> | Trainer</h3>
+        <img src="./assets/images/logo.pdf" alt="Alan Mead Coach, Trainer" />
       </a>
     </div>
     <nav>
-      <a href="#about" class="smooth-scroll">About Me</a>
+      <a href="#about" class="smooth-scroll">About</a>
       <a href="#coaching" class="smooth-scroll">Coaching</a>
+      <a href="#" class="smooth-scroll">Coaching Workshops</a>
+      <a href="#" class="smooth-scroll">Executive Coaching</a>
       <a href="#training" class="smooth-scroll">Training</a>
       <a href="#contact" class="smooth-scroll">Contact</a>
     </nav>
