--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -13,8 +13,9 @@
     }
   }
   a {
-    text-decoration: none;
-    color: #27ADE7;
+    img {
+      max-width: 180px;
+    }
   }
   nav {
     display: none;
@@ -23,13 +24,13 @@
     }
     a {
       font-size: 16px;
-      font-weight: 600;
+      font-weight: normal;
       margin-left: 15px;
       @include for-tablet-portrait-up {
           font-size: 16px;
       }
       @include for-tablet-landscape-up {
-          font-size: 18px;
+          font-size: 17px;
       }
     }
   }
