--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,7 +15,7 @@
 }
 .page-content {
   @include for-tablet-portrait-up {
-    padding-top: 103px;
+    padding-top: 100px;
   };
 }
 .hero {
@@ -86,6 +86,32 @@
   margin-bottom: 1em;
   letter-spacing: 3px;
 }
+.opening-speechmarks {
+  max-width: 45px;
+  margin: 0 10px 10px 0;
+}
+.copy-quote {
+  color: #333;
+  font-size: 22px;
+  line-height: 1.5;
+  font-family: 'Cormorant Garamond', 'Garamond', 'Georgia', serif;
+  font-style: italic;
+  padding: 15px 0;
+  border-top: 1px solid $tint;
+  border-bottom: 1px solid $tint;
+  margin: 15px 0 30px;
+  @include for-tablet-landscape-up {
+    float: right;
+    max-width: 500px;
+    margin: 15px 30px 15px 60px;
+  }
+  footer {
+    margin-top: 10px;
+    font-size: 20px;
+    text-align: right;
+    font-style: normal;
+  }
+}
 .deck {
   display: flex;
   justify-content: space-between;
@@ -100,7 +126,7 @@
   align-items: stretch;
   background: #f8f8f8;
   padding: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   @include for-tablet-landscape-up {
     flex: 0 0 48%;
   };
@@ -108,7 +134,8 @@
     flex: 0;
     h2 {
       font-size: 20px;
-      padding-bottom: 5px;
+      color: $brand-color;
+      padding-bottom: 10px;
     }
     h3 {
       font-size: 16px;
@@ -119,7 +146,7 @@
   .card_copy {
     flex: 1;
     p {
-      font-size: 15px;
+      font-size: 16px;
     }
   }
   .card_link {
@@ -139,10 +166,6 @@
   font-style: italic;
   border-top: 1px solid $tint;
   border-bottom: 1px solid $tint;
-  .opening-speechmarks {
-    max-width: 45px;
-    margin: 0 10px 10px 0;
-  }
   p {
     margin-top: 10px;
     text-align: right;
