--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600,600i" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400i,600" rel="stylesheet">
+  <link rel="stylesheet" href={{ "/assets/main.css" | prepend: site.url }}>
   <title>Alan Mead. Coach. Trainer.</title>
+
+  {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+  {% endif %}
+
 </head>
