--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,12 +3,19 @@
 
   {%- include head.html -%}
 
-  <body>
+  <body class="page">
 
     {%- include header.html -%}
 
-    <main>
-      {{ content }}
+    <main aria-label="Content">
+      <div class="container">
+        <section class="page-content">
+          {{ content }}
+        </section>
+
+        {% include contact.html %}
+
+      </div>
     </main>
 
     {%- include footer.html -%}
@@ -16,6 +23,6 @@
   </body>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
-  <script src="./assets/scripts.js"></script>
+  <script src={{ "/assets/scripts.js" | prepend: site.url }}></script>
 
 </html>
