Change pdf logo to png

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <div class="footer-content">
       <div class="footer-column column-left">
         <a href={{ "/" | prepend: site.url }}>
-          <img src={{ "/assets/images/logo.pdf" | prepend: site.url }} alt="Alan Mead. Coach, Trainer" />
+          <img src={{ "/assets/images/logo.png" | prepend: site.url }} alt="Alan Mead. Coach, Trainer" />
         </a>
       </div>
       <div class="footer-column column-middle">
