--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="brand">
       <a href={{ "/" | prepend: site.url }}>
-        <img src={{ "/assets/images/logo.pdf" | prepend: site.url }} alt="Alan Mead. Coach, Trainer" />
+        <img src={{ "/assets/images/logo.png" | prepend: site.url }} alt="Alan Mead. Coach, Trainer" />
       </a>
     </div>
     <nav>
