--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -5,11 +5,27 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap-reverse;
     padding: 20px 15px;
     border-bottom: 1px solid $tint;
-    @include for-tablet-landscape-up {
-        padding-left: 0;
-        padding-right: 0;
+    margin-top: -340px;
+    transition: 0.3s ease;
+    @include for-tablet-portrait-up {
+      margin-top: 0;
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+  .menu-open {
+    margin-top: 0;
+  }
+  .brand {
+    flex: 0 0 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @include for-tablet-portrait-up {
+      flex: 0 0 25%;
     }
   }
   a {
@@ -17,17 +33,36 @@
       max-width: 180px;
     }
   }
-  nav {
-    display: none;
+  button {
     @include for-tablet-portrait-up {
-      display: block;
+      display: none;
     }
-    a, .dropdown {
+  }
+  nav {
+    display: block;
+    flex: 0 0 100%;
+    margin: 15px 0 30px;
+    border-top: 1px solid $tint;
+    @include for-tablet-portrait-up {
+      margin: 0;
+      flex: 0 0 74%;
+      display: block;
+      text-align: right;
+      border-top: none;
+    }
+    a, span {
+      display: block;
+      padding: 15px;
       font-size: 16px;
       font-weight: normal;
-      margin-left: 15px;
+      text-align: center;
+      border-bottom: 1px solid $tint;
       @include for-tablet-portrait-up {
           font-size: 16px;
+          margin-left: 15px;
+          text-align: left;
+          display: inline;
+          border-bottom: none;
       }
       @include for-tablet-landscape-up {
           font-size: 17px;
@@ -35,28 +70,42 @@
     }
     .dropdown {
       color: $brand-color;
-      position: relative;
-      display: inline-block;
+      @include for-tablet-portrait-up {
+        display: inline-block;
+        position: relative;
+      }
+      span {
+        display: none;
+        @include for-tablet-portrait-up {
+          display: inline-block;
+        }
+      }
     }
     .dropdown-content {
-      display: none;
-      position: absolute;
-      right: 0;
-      background: #fff;
-      min-width: 360px;
-      box-shadow: 0px 16px 16px 0px rgba(0,0,0,0.1);
-      padding: 16px 16px;
-      z-index: 1;
+      @include for-tablet-portrait-up {
+        display: none;
+        position: absolute;
+        right: 0;
+        background: #fff;
+        min-width: 360px;
+        box-shadow: 0px 16px 16px 0px rgba(0,0,0,0.1);
+        padding: 16px 16px;
+        z-index: 1;
+      }
     }
-    .dropdown:hover .dropdown-content {
-      display: block;
-      a {
-        margin-left: 0;
-        display: block;
-        padding: 12px 15px;
-        text-align: left;
-        &:hover {
-          background: #eaeaea;
+    .dropdown:hover {
+      .dropdown-content {
+        @include for-tablet-portrait-up {
+          display: block;
+          a {
+            margin-left: 0;
+            display: block;
+            padding: 12px 15px;
+            text-align: left;
+            &:hover {
+              background: #eaeaea;
+            }
+          }
         }
       }
     }
@@ -65,3 +114,77 @@
     position: fixed;
   }
 }
+
+// Hamburger with thanks to Jonathon Suh
+
+.hamburger {
+  padding: 15px 15px;
+  display: inline-block;
+  cursor: pointer;
+  transition-property: opacity, filter;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  overflow: visible; }
+  .hamburger:hover {
+    opacity: 0.7; }
+  .hamburger.is-active:hover {
+    opacity: 0.7; }
+  .hamburger.is-active .hamburger-inner,
+  .hamburger.is-active .hamburger-inner::before,
+  .hamburger.is-active .hamburger-inner::after {
+    background-color: #000; }
+
+.hamburger-box {
+  width: 40px;
+  height: 24px;
+  display: inline-block;
+  position: relative; }
+
+.hamburger-inner {
+  display: block;
+  top: 50%;
+  margin-top: -2px; }
+  .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+    width: 40px;
+    height: 4px;
+    background-color: #444;
+    border-radius: 4px;
+    position: absolute;
+    transition-property: transform;
+    transition-duration: 0.15s;
+    transition-timing-function: ease; }
+  .hamburger-inner::before, .hamburger-inner::after {
+    content: "";
+    display: block; }
+  .hamburger-inner::before {
+    top: -10px; }
+  .hamburger-inner::after {
+    bottom: -10px; }
+
+// Spin
+.hamburger--spin .hamburger-inner {
+  transition-duration: 0.22s;
+  transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19); }
+  .hamburger--spin .hamburger-inner::before {
+    transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in; }
+  .hamburger--spin .hamburger-inner::after {
+    transition: bottom 0.1s 0.25s ease-in, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19); }
+
+.hamburger--spin.is-active .hamburger-inner {
+  transform: rotate(225deg);
+  transition-delay: 0.12s;
+  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
+  .hamburger--spin.is-active .hamburger-inner::before {
+    top: 0;
+    opacity: 0;
+    transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out; }
+  .hamburger--spin.is-active .hamburger-inner::after {
+    bottom: 0;
+    transform: rotate(-90deg);
+    transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
