--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
       <div class="footer-column column-right footer-footer">
         <p>Design and logo by Paul Beck. Thank you. </p>
         <p>Made with &hearts; in the Channel Islands.</p>
-        <p>&copy; Alan Mead 2018</p>
+        <p>&copy; Alan Mead 2018-2020</p>
       </div>
     </div>
   </div>
