Update footer quote

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,10 +1,12 @@
 <section id="contact">
-
   <h2>Contact Me</h2>
 
   <p>I’d love to hear from you.</p>
 
-  <p>You can contact me at any time to answer any questions you might have or to talk in more detail about any specific requirements I can help you with.</p>
+  <p>
+    You can contact me at any time to answer any questions you might have or to
+    talk in more detail about any specific requirements I can help you with.
+  </p>
 
   <div class="deck">
     <div class="card contact-card">
@@ -13,18 +15,28 @@
       </div>
       <div class="card_copy">
         <br />
-        <p>Email: <a href="mailto:{{ site.email }}" target="_blank">{{ site.email }}</a></p>
+        <p>
+          Email:
+          <a href="mailto:{{ site.email }}" target="_blank">{{ site.email }}</a>
+        </p>
         <p>Phone: <a href="tel:+447881023637">+44 7881 023 637</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/alanmead" target="_blank">linkedin/in/alanmead</a></p>
+        <p>
+          LinkedIn:
+          <a href="https://linkedin.com/in/alanmead" target="_blank"
+            >linkedin/in/alanmead</a
+          >
+        </p>
       </div>
     </div>
     <div class="card quote_card">
       <blockquote>
-        <img class="opening-speechmarks" src={{ "/assets/images/speechmarks.png" | prepend: site.url }} alt="speechmarks" />
-        My sessions with Alan helped me to realise what I really wanted out of my career and where my strengths lie. He understood how I ticked and helped build my confidence no end and for that I’m forever in his debt. I would highly recommend Alan.
-        <p>&mdash; Alice Walters, Bristol</p>
+        <img class="opening-speechmarks" src={{ "/assets/images/speechmarks.png"
+        | prepend: site.url }} alt="speechmarks" /> I think your training has
+        been brilliant, very different to other training where I feel like I
+        just have acronyms regurgitated at me. I'd really recommend it!"
+
+        <p> Nicola Sutherland – Account Director, Modern B2B, Bristol</p>
       </blockquote>
     </div>
   </div>
-
 </section>
