Hope for the best

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,15 @@
         <p>Design and logo by Paul Beck. Thank you. </p>
         <p>Made with &hearts; in the Channel Islands.</p>
         <p>&copy; Alan Mead 2018-2024</p>
+        <p>This project is part-funded by the UK Government through the UK Shared Prosperity Fund.</p>
+        <div class="row">
+          <div class="col-md-6">
+            <img src={{ "/assets/images/TDC-logo.png" | prepend: site.url }} alt="TDC logo" />
+          </div>
+          <div class="col-md-6">
+            <img src={{ "/assets/images/UKGov-logo.png" | prepend: site.url }} alt="UK Government logo" />
+          </div>
+        </div>
       </div>
     </div>
   </div>
