--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,10 +23,10 @@
         <p>This project is part-funded by the UK Government through the UK Shared Prosperity Fund.</p>
         <div class="row">
           <div class="col-md-6">
-            <img src={{ "/assets/images/TDC-logo.png" | prepend: site.url }} alt="TDC logo" />
+            <img src={{ "/assets/images/TDClogo.png" | prepend: site.url }} alt="TDC logo" />
           </div>
           <div class="col-md-6">
-            <img src={{ "/assets/images/UKGov-logo.png" | prepend: site.url }} alt="UK Government logo" />
+            <img src={{ "/assets/images/UKGovlogo.png" | prepend: site.url }} alt="UK Government logo" />
           </div>
         </div>
       </div>
