--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,11 +21,11 @@
         <p>Made with &hearts; in the Channel Islands.</p>
         <p>&copy; Alan Mead 2018-2024</p>
         <p>This project is part-funded by the UK Government through the UK Shared Prosperity Fund.</p>
-        <div class="row">
-          <div class="col-md-6">
+        <div class="logos">
+          <div>
             <img src={{ "/assets/images/TDClogo.png" | prepend: site.url }} alt="TDC logo" />
           </div>
-          <div class="col-md-6">
+          <div>
             <img src={{ "/assets/images/UKGovlogo.png" | prepend: site.url }} alt="UK Government logo" />
           </div>
         </div>
