--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -63,4 +63,26 @@
       font-size: 14px;
     }
   }
+  .logos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    @include for-tablet-landscape-up {
+      flex-direction: row;
+      align-items: stretch;
+      justify-content: flex-end;
+    }
+    div {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: white;
+      padding: 12px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+    }
+  }
 }
